# shift-solver

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.beads/: config.json
.beads/issues/: scheduler-1.md  scheduler-10.md  scheduler-100.md  scheduler-101.md  scheduler-102.md  scheduler-103.md  scheduler-104.md  scheduler-105.md  scheduler-106.md  scheduler-107.md  scheduler-108.md  scheduler-109.md  scheduler-11.md  scheduler-110.md  scheduler-111.md  scheduler-112.md  scheduler-113.md  scheduler-114.md  scheduler-115.md  scheduler-116.md  scheduler-117.md  scheduler-118.md  scheduler-119.md  scheduler-12.md  scheduler-120.md  scheduler-121.md  scheduler-122.md  scheduler-123.md  scheduler-124.md  scheduler-125.md  scheduler-126.md  scheduler-127.md  scheduler-128.md  scheduler-129.md  scheduler-13.md  scheduler-130.md  scheduler-131.md  scheduler-132.md  scheduler-133.md  scheduler-134.md  (+95 more)
config/: config.yaml
config/examples/: healthcare.yaml  retail.yaml  warehouse.yaml
examples/healthcare/: README.md  availability.csv  config.yaml  requests.csv  run.sh  workers.csv
examples/retail/: README.md  availability.csv  config.yaml  run.sh  workers.csv
examples/simple/: README.md  config.yaml  run.sh  workers.csv
src/shift_solver/: __init__.py
tests/: conftest.py  factories.py  strategies.py
tests/test_cli/: test_cli.py  test_integration.py  test_io_commands.py  test_plotly_export.py  test_validate_command.py
tests/test_config/: test_config.py  test_loading.py
tests/test_constraints/: test_availability.py  test_availability_request_overlap.py  test_constraint_context.py  test_coverage.py  test_fairness.py  test_fairness_category_filter.py  test_frequency.py  test_max_absence.py  test_request.py  test_restriction.py  test_sequence.py  test_shift_frequency.py  test_shift_order_preference.py
tests/test_db/: test_schema.py
tests/test_e2e/: conftest.py  test_availability_edge_cases.py  test_boundary_conditions.py  test_boundary_scenarios.py  test_cli_workflows.py  test_constraint_interactions.py  test_error_handling.py  test_fairness_edge_cases.py  test_holiday_coverage.py  test_industry_complex_scenarios.py  test_industry_scenarios.py  test_infeasible_scenarios.py  test_multi_constraint_scenarios.py  test_multi_site_scheduling.py  test_performance.py  test_physician_scheduler_emulation.py  test_plotly_visualization.py  test_real_world_patterns.py  test_regression.py  test_request_conflicts.py  test_restriction_complexity.py  test_single_worker_scenarios.py  test_solver_stress.py  test_tight_constraints.py
tests/test_integration/: conftest.py  test_config_integration.py  test_db_persistence.py  test_io_pipeline.py  test_post_solve_validation.py  test_solver_integration.py
tests/test_io/: conftest.py  test_chart_utils.py  test_coverage_chart.py  test_csv_loader.py  test_date_ambiguity.py  test_date_utils.py  test_excel_handler.py  test_export_all.py  test_fairness_chart.py  test_frozenset_parsing.py  test_gantt_chart.py  test_heatmap_chart.py  test_json_roundtrip.py  test_plotly_handler.py  test_priority_consistency.py  test_sample_generator.py  test_sunburst_chart.py
tests/test_models/: test_data_models.py  test_schedule.py  test_shift.py  test_worker.py  test_worker_validation.py
tests/test_solver/: test_objective_builder.py  test_objective_scaling.py  test_progress_callback.py  test_properties.py  test_shift_solver.py  test_solution_extractor.py  test_types.py  test_variable_accessor_errors.py  test_variable_builder.py
tests/test_utils/: test_exceptions.py  test_logging.py
web/: manage.py
(+194 files in other folders)
