[project]
name = "shift-solver"
version = "0.1.0"
description = "General-purpose shift scheduling optimization using constraint programming"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Jason Olinger", email = "jasonolinger@fastmail.com" }
]
requires-python = ">=3.12"
keywords = ["scheduling", "optimization", "constraint-programming", "shifts", "workforce"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "ortools>=9.7.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "tqdm>=4.64.0",
    "colorama>=0.4.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
excel = [
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.0.0",
]

[project.scripts]
shift-solver = "shift_solver.cli.main:cli"

[project.urls]
Homepage = "https://github.com/jbolinge/shift-solver"
Repository = "https://github.com/jbolinge/shift-solver.git"
Issues = "https://github.com/jbolinge/shift-solver/issues"

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "types" },
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "hypothesis>=6.0.0",
    "freezegun>=1.0.0",
    "faker>=20.0.0",
]
lint = [
    "ruff>=0.1.0",
]
types = [
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
    "types-pyyaml>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "unit: marks tests as unit tests (fast)",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow running",
    "smoke: marks tests as quick smoke tests",
]

[tool.coverage.run]
source = ["src/shift_solver"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["shift_solver"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "ortools.*",
    "tqdm",
    "openpyxl.*",
    "colorama",
    "plotly.*",
]
ignore_missing_imports = true
